Filter out stationary touches from coalesced list

Since stationary touch points are added in our
code and are not real event stream we should
not add those to the list of coalesced events.
This CL filters out all the stationary touch
points from the coalesced event list of a
touch pointer event.

BUG=704419

Review-Url: https://codereview.chromium.org/2770713006
Cr-Commit-Position: refs/heads/master@{#459131}

Former-commit-id: 910c2e27c11b75877fb552aa0162a7419944dfed